# aries.ai

./: .gitignore  README.md  agent.py  api.py  database.py  dsa_agent.db  generate_audio_assets.py  leetcode_tools.py  list_all_tools.py  mcp_leetcode_client.py  record_user_name.py  requirements.txt  test_tts.py  testcase_agent.py  validator_agent.py  verify_aries_final.py
backend/: generate_intro_workspace.py  intro_audio_b64.txt  pyproject.toml
backend/app/: dsa_agent.db  main.py
backend/app/agents/: base.py
backend/app/agents/aries_tutor/: config.py
backend/app/api/aries/: router.py
backend/app/api/chat/: router.py
backend/app/api/compiler/: router.py
backend/app/api/mcp/: router.py
backend/app/api/user/: router.py
backend/app/api/voice/: router.py
backend/app/core/: config.py
backend/app/core/aries/: models.py
backend/app/core/chat/: models.py
backend/app/core/compiler/: models.py
backend/app/core/database/: manager.py  models.py
backend/app/core/mcp/: models.py
backend/app/core/user/: models.py
backend/app/infrastructure/aries/: mongo_client.py  redis_client.py
backend/app/infrastructure/compiler/: executor.py
backend/app/infrastructure/mcp/: client.py
backend/app/services/aries/: memory.py  service.py
backend/app/services/chat/: service.py
backend/tests/chat/: test_chat_router.py  test_chat_service.py
backend/tests/compiler/: test_compiler_router.py  test_compiler_service.py
backend/tests/mcp/: test_mcp_router.py  test_mcp_service.py
backend/tests/voice/: test_voice_router.py  test_voice_service.py
(+26 files in other folders)
