[project]
name = "backend"
version = "0.1.0"
description = "DSA Agent Backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.33.0",
    "groq>=0.4.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.26.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv]
managed = true
